--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="BaseCell.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Generator.cpp" />
     <ClCompile Include="LoadedArea.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Tile.cpp" />
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseCell.h" />
+    <ClInclude Include="Generator.h" />
     <ClInclude Include="LoadedArea.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Tile.h" />
