--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -127,21 +127,33 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BaseBlock.cpp" />
+    <ClCompile Include="BaseBlockType.cpp" />
     <ClCompile Include="BaseCell.cpp" />
+    <ClCompile Include="BlockTypesService.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Generator.cpp" />
     <ClCompile Include="LoadedArea.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="SeedService.cpp" />
     <ClCompile Include="Tile.cpp" />
     <ClCompile Include="Visualizer.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseBlock.h" />
+    <ClInclude Include="BaseBlockType.h" />
     <ClInclude Include="BaseCell.h" />
+    <ClInclude Include="BlockTypesService.h" />
     <ClInclude Include="Generator.h" />
     <ClInclude Include="LoadedArea.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="SeedService.h" />
     <ClInclude Include="Tile.h" />
     <ClInclude Include="Visualizer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Game.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
