--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -22,6 +22,12 @@
     <Filter Include="Source Files\Visualization">
       <UniqueIdentifier>{1967d484-52b9-4895-9d83-911e184ff61d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\World\Blocks">
+      <UniqueIdentifier>{1d91d30e-8ee8-457f-af1d-b7388e419397}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\World\Blocks\BlockTypes">
+      <UniqueIdentifier>{49ca8f7a-6b7e-41b3-a5db-09215482a861}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -45,6 +51,18 @@
     <ClCompile Include="Generator.cpp">
       <Filter>Source Files\World</Filter>
     </ClCompile>
+    <ClCompile Include="BaseBlock.cpp">
+      <Filter>Source Files\World\Blocks</Filter>
+    </ClCompile>
+    <ClCompile Include="BaseBlockType.cpp">
+      <Filter>Source Files\World\Blocks\BlockTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="BlockTypesService.cpp">
+      <Filter>Source Files\World\Blocks\BlockTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="SeedService.cpp">
+      <Filter>Source Files\World</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseCell.h">
@@ -65,5 +83,25 @@
     <ClInclude Include="Generator.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BaseBlock.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseBlockType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BlockTypesService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SeedService.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Game.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
